Footer navbar z-index fixed

--- a/theme/assets/less/fixers.less
+++ b/theme/assets/less/fixers.less
@@ -9,3 +9,7 @@
 .navbar-transparent {
   background-color: rgba(0, 0, 0, 0.0) !important;
 }
+
+.footer-navbar {
+  z-index: -1;
+}
